# TermiLite

./: .gitignore  LICENSE  README.md  changelog.txt  pyproject.toml
examples/: calculator.py  centered_label.py  hello_world.py  input_box.py  kbd_actions.py  notification.py  pages.py  panel.py  termilite_title.py  two_windows.py
src/termilite/: __init__.py  color.py  globals.py
src/termilite/core/: engine.py  input_handler.py  mouse.py  terminal.py
src/termilite/ui/: button.py  input.py  inputbox.py  label.py  notification.py  page.py  panel.py  separator.py  window.py
